force-app/main/default/objects/leaseworks__Lease_Sections__c/leaseworks__Lease_Sections__c.object-meta.xml
<CustomObject>
    <description>Lease Agreement data extracts are captured in this table. Associated lookups, when populated, populate designated fields in various parts of the lease (e.g., Supplemental Rent, Security Deposits).</description>
    <label>Lease Agreement Section</label>
    <nameField>
        <label>Section Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lease Agreement Sections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>