force-app/main/default/objects/leaseworks__Lease_Sections__c/fields/leaseworks__Cash_Security_Deposit__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Cash_Security_Deposit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cash Security Deposit</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.leaseworks__Lease__c</field>
            <operation>equals</operation>
            <valueField>leaseworks__Cash_Security_Deposit__c.leaseworks__Lease__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>leaseworks__Cash_Security_Deposit__c</referenceTo>
    <relationshipLabel>Lease Agreement Sections</relationshipLabel>
    <relationshipName>Lease_Agreement_Sections</relationshipName>
    <type>Lookup</type>
</CustomField>