force-app/main/default/objects/leaseworks__Lease_Sections__c/fields/leaseworks__Lease_Update_History__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Lease_Update_History__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lease Update History</label>
    <referenceTo>leaseworks__Lease_Extension_History__c</referenceTo>
    <relationshipLabel>Lease Agreement Sections</relationshipLabel>
    <relationshipName>Lease_Agreement_Sections</relationshipName>
    <type>Lookup</type>
</CustomField>