force-app/main/default/objects/leaseworks__Lease_Sections__c/fields/leaseworks__Rent_Details__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Rent_Details__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rent Details</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.leaseworks__Lease__c</field>
            <operation>equals</operation>
            <valueField>leaseworks__Stepped_Rent__c.leaseworks__Lease__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>leaseworks__Stepped_Rent__c</referenceTo>
    <relationshipLabel>Lease Agreement Sections</relationshipLabel>
    <relationshipName>Lease_Agreement_Sections</relationshipName>
    <type>Lookup</type>
</CustomField>