force-app/main/default/objects/leaseworks__Lease_Sections__c/fields/leaseworks__Wet_Lease_Sub_Lease_Clauses__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Wet_Lease_Sub_Lease_Clauses__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Wet Lease &amp; Sub Lease Clauses</label>
    <referenceTo>leaseworks__Sublease_Clauses__c</referenceTo>
    <relationshipLabel>Lease Agreement Sections</relationshipLabel>
    <relationshipName>Lease_Agreement_Sections</relationshipName>
    <type>Lookup</type>
</CustomField>