force-app/main/default/objects/leaseworks__Lease_Sections__c/fields/Right_to_Sub_Lease_Comments_Local__c.field-meta.xml
<CustomField>
    <fullName>Right_to_Sub_Lease_Comments_Local__c</fullName>
    <label>Right to Sub Lease Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>