force-app/main/default/objects/leaseworks__Lease_Sections__c/validationRules/leaseworks__DeliveryDetailsRelatedToSameLease.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__DeliveryDetailsRelatedToSameLease</fullName>
    <active>true</active>
    <errorConditionFormula>AND(!ISBLANK( leaseworks__Redelivery_Details__c ),leaseworks__Redelivery_Details__c &lt;&gt; leaseworks__Lease__r.leaseworks__Return_Condition__c  )</errorConditionFormula>
    <errorDisplayField>leaseworks__Redelivery_Details__c</errorDisplayField>
    <errorMessage>Please choose the Redelivery Details related to this Lease</errorMessage>
</ValidationRule>