force-app/main/default/objects/leaseworks__Lease_Sections__c/validationRules/leaseworks__LeaseUpdateHistoryRelatedToLease.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__LeaseUpdateHistoryRelatedToLease</fullName>
    <active>true</active>
    <errorConditionFormula>AND(!ISBLANK( leaseworks__Lease_Update_History__c ),  leaseworks__Lease__c &lt;&gt;  leaseworks__Lease_Update_History__r.leaseworks__Lease__c)</errorConditionFormula>
    <errorDisplayField>leaseworks__Lease_Update_History__c</errorDisplayField>
    <errorMessage>Please choose the Lease Update History related to this Lease</errorMessage>
</ValidationRule>