force-app/main/default/objects/leaseworks__Lease_Sections__c/validationRules/leaseworks__WetLeaseSubLeaseRelatedToSameLease.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__WetLeaseSubLeaseRelatedToSameLease</fullName>
    <active>true</active>
    <errorConditionFormula>AND(!ISBLANK( leaseworks__Wet_Lease_Sub_Lease_Clauses__c ),leaseworks__Lease__c &lt;&gt;  leaseworks__Wet_Lease_Sub_Lease_Clauses__r.leaseworks__Lease__c)</errorConditionFormula>
    <errorDisplayField>leaseworks__Wet_Lease_Sub_Lease_Clauses__c</errorDisplayField>
    <errorMessage>Please choose the Wet Lease &amp; Sub Lease Clauses related to this Lease</errorMessage>
</ValidationRule>